Add styles for main navbar and media queries

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Страница технической документации</title>
   </head>
   <body>
-    <nav id="navbar">
+    <nav class="navbar" id="navbar">
       <header>Основы JavaScript</header>
       <ul>
         <li>
@@ -37,7 +37,7 @@
         </li>
       </ul>
     </nav>
-    <main id="main-doc">
+    <main class="main-doc" id="main-doc">
       <section class="main-section" id="Introduction">
         <header>Введение</header>
         <article>
